	(epackage-loader-file-insert-load-path): New.
	(epackage-loader-file-generate-boot): Call
	`epackage-loader-file-generate-load-path'.
	(epackage-eval-file): New.
	(epackage--byte-compile-buffer): New.
	(epackage--finder-commentary-buffer-name): Rename. Was
	`epackage--finder-commentary-buffer'. Set to defconst.
	(epackage-with-byte-compile-buffer): New.

2010-12-13 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-build-sources-list): New.
	(epackage-combine-files): New.
	(epackage-config-status-of-packages): Correct `add-to-list' call.
	(epackage-cmd-remove-package): Adjust message.
	(epackage-cmd-download-package): Adjust message.
	(epackage-download-package): Adjust message. Pass `verbose'
	to `epackage-git-command-clone'.
	(epackage-cmd-enable-package): Check download status.
	(epackage-cmd-autoload-package): Check download status.
	(epackage-cmd-activate-package): Check download status.
	(epackage-cmd-deactivate-package): Check no files.
	(epackage-cmd-disable-package): Check no files.
	(epackage-config-delete-all): Return list of deleted files.
	(epackage-cmd-clean-package): Check nothing to clean.
	(epackage-cmd-upgrade-package): Improve message.
	(epackage-initialize): Always call `epackage-cmd-build-sources-list'.
	(epackage-documentation-header-string): Add arg FILE.
	(epackage-documentation): pass FILE to
	`epackage-documentation-header-string'.
	(epackage-asscoc): New.
	(epackage-documentation-from-file-main): New.
	(epackage-documentation-header-string): Use
	`epackage-documentation-from-file-main'.
	(epackage-documentation-buffer-version-main): New.
	(epackage-documentation-buffer-version-defconst): New.
	(epackage-documentation-by-lisp-file): New.
	(epackage-documentation): Rewrite.

2010-12-12 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--sources-package-name): update docstirng.
	(epackage--sources-list-url): Add defcustom tags.
	(epackage--sources-file-list): New.
	(epackage-file-name-conf-directory): New.